--- a/BlueLibrary/Storyboard.storyboard
+++ b/BlueLibrary/Storyboard.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6154.21" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="fXs-a7-Uoq">
     <dependencies>
+        <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6153.13"/>
     </dependencies>
     <scenes>
@@ -26,6 +27,7 @@
         <!--Navigation Controller-->
         <scene sceneID="QIE-7i-qbW">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IsV-cz-f1F" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fXs-a7-Uoq" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="NnJ-CV-C9t">
@@ -37,7 +39,6 @@
                         <segue destination="t4p-iP-eZE" kind="relationship" relationship="rootViewController" id="0CU-Tu-m8z"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IsV-cz-f1F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="225" y="143"/>
         </scene>
